force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/tc9_pr__Payee_Deduction_Record__c.object-meta.xml
<CustomObject>
    <label>Payee Deduction Record</label>
    <nameField>
        <label>Payee Deduction Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payee Deduction Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>