force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_eau__Super_Contribution_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Super_Contribution_Type__c</fullName>
    <description>Allowable superannuation contribution types</description>
    <label>Super Contribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_eau__Superannuation_Types</valueSetName>
    </valueSet>
</CustomField>