force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Amount_Remaining__c</fullName>
    <description>The amount remainin for the deduction (Total deduction limit less total of deduction applied)</description>
    <inlineHelpText>The amount remainin for the deduction (Total deduction limit less total of deduction applied)</inlineHelpText>
    <label>Amount Remaining</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>