force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Assignment record this Payee Deduction Record relates to</description>
    <inlineHelpText>The Assignment record this Payee Deduction Record relates to</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Payee Deduction Records</relationshipLabel>
    <relationshipName>Payee_Deduction_Records</relationshipName>
    <type>Lookup</type>
</CustomField>