force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Auto_Create_New_Payee_Leave_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Auto_Create_New_Payee_Leave_Rule__c</fullName>
    <description>Indicates whether the product will automatically create a new Payee Leave Rule for a Purchased Leave Deduction. Leave Rule must be populated if this field is &apos;Yes&apos;</description>
    <inlineHelpText>Indicates whether the product will automatically create a new Payee Leave Rule for a Purchased Leave Deduction. Leave Rule must be populated if this field is &apos;Yes&apos;</inlineHelpText>
    <label>Auto Create New Payee Leave Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>