force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Deduction_Order__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Deduction_Order__c</fullName>
    <description>Specifies the order in which Payee Deduction records will be assessed during deduction transaction creation</description>
    <inlineHelpText>Specifies the order in which Payee Deduction records will be assessed during deduction transaction creation</inlineHelpText>
    <label>Deduction Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>