force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Deduction_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Deduction_Rate__c</fullName>
    <description>Defines the rate that will be used when calculating the deduction amount duing the deduction transaction creation</description>
    <inlineHelpText>Defines the rate that will be used when calculating the deduction amount duing the deduction transaction creation</inlineHelpText>
    <label>Deduction Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>