force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Deduction_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Deduction_Rate_Type__c</fullName>
    <description>Defines if the value outlined in the Deduction Rate field should be treated as a fixed amount or as a percentage of the Payee&apos;s earnings</description>
    <inlineHelpText>Defines if the value outlined in the Deduction Rate field should be treated as a fixed amount or as a percentage of the Payee&apos;s earnings</inlineHelpText>
    <label>Deduction Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Deduction Units x Deduction Rate</fullName>
            </value>
            <value>
                <fullName>Percentage of Gross</fullName>
            </value>
            <value>
                <fullName>Percentage of OTE</fullName>
            </value>
            <value>
                <fullName>Percentage of SGC Refund</fullName>
            </value>
            <value>
                <fullName>Percentage of Taxable Gross</fullName>
            </value>
            <value>
                <fullName>Rate per Quantity Worked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>