force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Deduction_Units__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Deduction_Units__c</fullName>
    <description>Defines the number of units which will be deducted per calendar period if the selected Deduction Rate Type is Deduction Units x Deduction Rate</description>
    <inlineHelpText>Defines the number of units which will be deducted per calendar period if the selected Deduction Rate Type is Deduction Units x Deduction Rate</inlineHelpText>
    <label>Deduction Units</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>