force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Deductions_Remaining__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Deductions_Remaining__c</fullName>
    <description>The number of deductions remaining.</description>
    <formula>IF(
  ISBLANK(tc9_pr__Quantity__c), &quot;No Limit Applied&quot;, TEXT(tc9_pr__Quantity__c - tc9_pr__Number_of_Times_Applied__c)
)</formula>
    <inlineHelpText>The number of deductions remaining.</inlineHelpText>
    <label>Deductions Remaining</label>
    <type>Text</type>
</CustomField>