force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Effective_Date__c</fullName>
    <description>The date the deduction will become effective. Deductions will not be taken before this date.</description>
    <inlineHelpText>The date the deduction will become effective. Deductions will not be taken before this date.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>