force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Expiry_Date__c</fullName>
    <description>The date the deduction expires. Deductions will not be taken after this date. If blank no expiry date applies.</description>
    <inlineHelpText>The date the deduction expires. Deductions will not be taken after this date. If blank no expiry date applies.</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>