force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Is_Rollover_Underpaid_Deductions__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Is_Rollover_Underpaid_Deductions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default = False. Defines if deduction amounts that can not be withheld should be rolled over to be withheld in future payruns.</description>
    <inlineHelpText>Default = False. Defines if deduction amounts that can not be withheld should be rolled over to be withheld in future payruns.</inlineHelpText>
    <label>Is Rollover Underpaid Deductions?</label>
    <type>Checkbox</type>
</CustomField>