force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Latest_Deductions_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Latest_Deductions_Date__c</fullName>
    <description>The value in the latest Pay_Transaction__c.Entry_Date__c field of all Pay Transactions related to the Payee Deduction Record</description>
    <inlineHelpText>The value in the latest Pay_Transaction__c.Entry_Date__c field of all Pay Transactions related to the Payee Deduction Record</inlineHelpText>
    <label>Latest Deductions Date</label>
    <type>Date</type>
</CustomField>