force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Leave_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Leave_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Leave Rule from which a new Payee Leave Rule will be auto created if record type Purchased Leave Deductions and Auto Create New Payee Leave Rule = Yes.</description>
    <inlineHelpText>Parent Leave Rule from which a new Payee Leave Rule will be auto created if record type Purchased Leave Deductions and Auto Create New Payee Leave Rule = Yes.</inlineHelpText>
    <label>Leave Rule</label>
    <referenceTo>tc9_pr__Leave_Rule__c</referenceTo>
    <relationshipLabel>Payee Deduction Records</relationshipLabel>
    <relationshipName>Payee_Deduction_Records</relationshipName>
    <type>Lookup</type>
</CustomField>