force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Number_of_Times_Applied__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Number_of_Times_Applied__c</fullName>
    <description>The number of times the deduction has been applied</description>
    <inlineHelpText>The number of times the deduction has been applied</inlineHelpText>
    <label>Number of Times Applied</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>