force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Pay Code that will be used when a Deduction is withheld</description>
    <inlineHelpText>Defines the Pay Code that will be used when a Deduction is withheld</inlineHelpText>
    <label>Pay Code</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Pay Code of type &quot;Deduction&quot; only is allowed</errorMessage>
        <filterItems>
            <field>tc9_pr__Pay_Code__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Deduction</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Pay_Code__c</referenceTo>
    <relationshipLabel>Payee Deduction Records</relationshipLabel>
    <relationshipName>Payee_Deduction_Records</relationshipName>
    <type>Lookup</type>
</CustomField>