force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Pay_To_Account_Record__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_To_Account_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Where the Pay To Type is Account, defines the Account record payments should be made to</description>
    <inlineHelpText>Where the Pay To Type is Account, defines the Account record payments should be made to</inlineHelpText>
    <label>Pay To Account Record</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payee Deduction Records</relationshipLabel>
    <relationshipName>Payee_Deduction_Records</relationshipName>
    <type>Lookup</type>
</CustomField>