force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Pay_To_Withholding_Record__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_To_Withholding_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Where the Pay To Type is Payee Withholding, defines the Payee Withholding record detailing the recipient payments should be made to</description>
    <inlineHelpText>Where the Pay To Type is Payee Withholding, defines the Payee Withholding record detailing the recipient payments should be made to</inlineHelpText>
    <label>Pay To Withholding Record</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Payee_Withholding__c.tc9_pr__Payee__c</field>
            <operation>equals</operation>
            <valueField>$Source.tc9_pr__Payee__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Payee_Withholding__c</referenceTo>
    <relationshipLabel>Payee Deduction Records</relationshipLabel>
    <relationshipName>Payee_Deduction_Records</relationshipName>
    <type>Lookup</type>
</CustomField>