force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Payee_Deduction_Template__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee_Deduction_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the Payee Deduction Record to a Deduction Template</description>
    <inlineHelpText>Relates the Payee Deduction Record to a Deduction Template</inlineHelpText>
    <label>Payee Deduction Template</label>
    <referenceTo>tc9_pr__Payee_Deduction_Template__c</referenceTo>
    <relationshipLabel>Payee Deduction Records</relationshipLabel>
    <relationshipName>Payee_Deduction_Records</relationshipName>
    <type>Lookup</type>
</CustomField>