force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Payment Entity this Payee Deduction Record relates to</description>
    <inlineHelpText>The Payment Entity this Payee Deduction Record relates to</inlineHelpText>
    <label>Payment Entity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account of type &quot;Payment Entity&quot; only is allowed</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Payment_Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payee Deduction Records (Payment Entity)</relationshipLabel>
    <relationshipName>Payee_Deduction_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>