force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Purchased_Leave_Accrual_Basis__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Purchased_Leave_Accrual_Basis__c</fullName>
    <description>Indicates how the accrual value of the related Payee Leave Rule will be determined. This will either match the calculated Deduction Units or use the Payee Leave Rule calculation.</description>
    <inlineHelpText>Indicates how the accrual value of the related Payee Leave Rule will be determined. This will either match the calculated Deduction Units or use the Payee Leave Rule calculation.</inlineHelpText>
    <label>Purchased Leave Accrual Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Purchased_Leave_Accrual_Basis</valueSetName>
    </valueSet>
</CustomField>