force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Quantity__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Quantity__c</fullName>
    <description>Defines the number of times the deduction will be taken. If blank no limit applies</description>
    <inlineHelpText>Defines the number of times the deduction will be taken. If blank no limit applies</inlineHelpText>
    <label>Quantity</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>