force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Quantity_Worked_Maximum__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Quantity_Worked_Maximum__c</fullName>
    <description>The deduction will be considered if the quantity of units worked is less than or equal this value.</description>
    <inlineHelpText>The deduction will be considered if the quantity of units worked is less than or equal this value.</inlineHelpText>
    <label>Quantity Worked Maximum</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>