force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Rolled_Over_Amount_Not_Withheld__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Rolled_Over_Amount_Not_Withheld__c</fullName>
    <description>The sum total of the related pay transactions with the Is Rolled Over Amount Not Withheld? field set to True. This defines the total aount thats has been rolled over to be withheld in a future payrun for the Payee Deduction record</description>
    <inlineHelpText>The sum total of the related pay transactions with the Is Rolled Over Amount Not Withheld? field set to True. This defines the total aount thats has been rolled over to be withheld in a future payrun for the Payee Deduction record</inlineHelpText>
    <label>Rolled Over Amount Not Withheld</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>