force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Rolled_Over_Amount_Withheld__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Rolled_Over_Amount_Withheld__c</fullName>
    <description>The sum total of the related pay transactions with the Is Rolled Over Amount Withheld? field set to True. This defines the total rolled over amount thats has subequently been withheld in future payruns</description>
    <inlineHelpText>The sum total of the related pay transactions with the Is Rolled Over Amount Withheld? field set to True. This defines the total rolled over amount thats has subequently been withheld in future payruns</inlineHelpText>
    <label>Rolled Over Amount Withheld</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>