force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Status__c</fullName>
    <description>Indicates whether the Payee Deduction Record is currently Active, Inactive or Pending</description>
    <inlineHelpText>Indicates whether the Payee Deduction Record is currently Active, Inactive or Pending</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Active_Status_Picklists</valueSetName>
    </valueSet>
</CustomField>