force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Total_Deduction_Limit__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Total_Deduction_Limit__c</fullName>
    <description>Defines an upper limit to the deduction amount that can be withheld for the deduction. When deductions are calculated, the deduction aount withheld will be adjusted to ensure this amount is not exceeded. If blank no limit applies</description>
    <inlineHelpText>Defines an upper limit to the deduction amount that can be withheld for the deduction. When deductions are calculated, the deduction aount withheld will be adjusted to ensure this amount is not exceeded. If blank no limit applies</inlineHelpText>
    <label>Total Deduction Limit</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>