force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/fields/tc9_pr__Total_Of_Deductions_Applied__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Total_Of_Deductions_Applied__c</fullName>
    <description>The total amount withheld for the deduction</description>
    <inlineHelpText>The total amount withheld for the deduction</inlineHelpText>
    <label>Total Of Deductions Applied</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>