force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/recordTypes/tc9_pr__General_Deductions.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__General_Deductions</fullName>
    <active>true</active>
    <description>Used to define general deduction types</description>
    <label>General Deductions</label>
</RecordType>