force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/recordTypes/tc9_pr__Purchased_Leave_Deductions.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Purchased_Leave_Deductions</fullName>
    <active>true</active>
    <description>Used to define deductions relating to Purchased Leave</description>
    <label>Purchased Leave Deductions</label>
</RecordType>