force-app/main/default/objects/tc9_pr__Payee_Deduction_Record__c/listViews/tc9_pr__PAYG_Deductions.listView-meta.xml
<ListView>
    <fullName>tc9_pr__PAYG_Deductions</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Payee__c</columns>
    <columns>tc9_pr__Employee__c</columns>
    <columns>tc9_pr__Assignment__c</columns>
    <columns>tc9_pr__Pay_Code__c</columns>
    <columns>tc9_pr__Effective_Date__c</columns>
    <columns>tc9_pr__Expiry_Date__c</columns>
    <columns>tc9_pr__Deduction_Rate_Type__c</columns>
    <columns>tc9_pr__Deduction_Rate__c</columns>
    <columns>tc9_pr__Deduction_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>tc9_pr__Payee_Deduction_Record__c.tc9_pr__PAYG_Deductions</value>
    </filters>
    <label>PAYG Deductions</label>
</ListView>